[gd_scene load_steps=14 format=3 uid="uid://cjurojyuklair"]

[ext_resource type="Script" uid="uid://j7mrwg6gdmen" path="res://Scripts/Elementos/placa.gd" id="1_2hf4b"]
[ext_resource type="Texture2D" uid="uid://csrx3jpm11hvx" path="res://Sprites/Elementos/Placa presión/placa_presión.png" id="1_lpn5m"]

[sub_resource type="AtlasTexture" id="AtlasTexture_2hf4b"]
atlas = ExtResource("1_lpn5m")
region = Rect2(0, 0, 30, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_bu5nr"]
atlas = ExtResource("1_lpn5m")
region = Rect2(0, 0, 30, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_fhe5o"]
atlas = ExtResource("1_lpn5m")
region = Rect2(30, 0, 30, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_evpii"]
atlas = ExtResource("1_lpn5m")
region = Rect2(60, 0, 30, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_uq7m3"]
atlas = ExtResource("1_lpn5m")
region = Rect2(90, 0, 30, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_lpn5m"]
atlas = ExtResource("1_lpn5m")
region = Rect2(90, 0, 30, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_55g2y"]
atlas = ExtResource("1_lpn5m")
region = Rect2(60, 0, 30, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_tokvh"]
atlas = ExtResource("1_lpn5m")
region = Rect2(30, 0, 30, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_psvy4"]
atlas = ExtResource("1_lpn5m")
region = Rect2(0, 0, 30, 8)

[sub_resource type="SpriteFrames" id="SpriteFrames_55g2y"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2hf4b")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bu5nr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fhe5o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_evpii")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uq7m3")
}],
"loop": false,
"name": &"press",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lpn5m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_55g2y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tokvh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_psvy4")
}],
"loop": false,
"name": &"release",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_un8um"]
size = Vector2(16, 6)

[node name="Placa" type="Area2D"]
collision_mask = 3
script = ExtResource("1_2hf4b")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_55g2y")
animation = &"release"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_un8um")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
